PR/43255: Make -n apply to the -c string so sh -n -c 'commands' works as it should. Also, other places where the shell parses strings of commands are also now controlled by -n (traps, eval, ...)  (from kre)